# stick-fighter

./: .env.example  .gitignore  BLOG.md  CLAUDE.md  Dockerfile  README.md  auth.py  characters.py  docker-compose.yml  elo.py  fly.toml  game_loop.py  index.html  jest.config.js  matchmaking.py  package-lock.json  package.json  pyproject.toml  room_cleanup.py  room_manager.py  schema.sql  server.py  signaling.py
.beads/: metadata.json
.ralph-tui/: config.toml  progress.md  session-meta.json  session.json
game_engine/: __init__.py  actions.py  fighter.py  game.py
src/: auth.js  fighter.js  game.js  input.js  llm.js  main.js  phone.js  prediction.js  router.js  session.js  sfx.js  simulated.js  ui.js  voice.js  webrtc.js
tasks/: multiplayer-rooms-prd.md  post-launch-fixes-prd.md
tests/: auth.test.js  characters.test.js  hadouken.test.js  instructions.test.js  keyboard-nav.test.js  prediction.test.js  router.test.js  status-feedback.test.js  test_auth.py  test_characters.py  test_elo.py  test_game_engine.py  test_game_loop.py  test_matchmaking.py  test_room_cleanup.py  test_room_manager.py  test_server.py  test_signaling.py  ui.test.js  username-edit.test.js  waiting-arena.test.js  webrtc.test.js
